crates/aimee_domain/src/snapshots/aimee_domain__context__tests__update_image_tool_calls_tool_results_no_images.snap
---
source: crates/aimee_domain/src/context.rs
expression: actual
---
messages:
  - text:
      role: System
      content: System message
  - tool:
      name: text_tool
      call_id: call1
      output:
        is_error: false
        values:
          - text: Text output
  - tool:
      name: empty_tool
      call_id: call2
      output:
        is_error: false
        values:
          - empty
